k8s/gsicrawler-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${NAME}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: gsicrawler-luigi
        app: ${NAME}
    spec:
      containers:
      - name: gsicrawler
        image: ${CI_REGISTRY_IMAGE}:${VERSION}
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
          - name: luigiweb
            containerPort: 8082
