k8s/gsicrawler-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gsicrawler-latest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    role: gsicrawler-latest-web
