k8s/gsicrawler-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gsicrawler-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gsicrawler.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: gsicrawler-web
          servicePort: 8080
  - host: gsicrawler-luigi.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: gsicrawler-luigi
          servicePort: 8000
      - path: /tasks/
        backend:
          serviceName: gsicrawler-luigi
          servicePort: 8082
